<resources>
    <string name="app_name">하루독후감</string>
    <string name="search">Search Books</string>
    <string name="favorite">favorite Books</string>
    <string name="setting">Setting</string>
    <string name="search_menu">책 검색</string>
    <string name="favorite_menu">즐겨찾기</string>
    <string name="book_report">독후감</string>
    <string name="setting_menu">설정</string>
    <string name="book_info">Book Info</string>
    <string name="register_book_report">독후감 쓰러가기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modify">독후감 수정하기</string>
    <string name="delete">독후감 삭제하기</string>
    <string name="change_time">시간 재설정</string>
    <string name="on_alarm">알람 켜기</string>
    <string name="set_alarm">알람 켜기</string>
    <string name="go_set_alarm">알람 설정하러 가기</string>
    <string name="arrange">정렬</string>
    <string name="arrange_accuracy">정확도순</string>
    <string name="arrange_new">최신순</string>
    <string name="cache_policy">캐시정책</string>
    <string name="cache_policy_content">자동으로 캐시 삭제 활성화</string>
    <string name="cache_status">상태</string>
    <string name="go_to_link">상세 링크로 이동</string>
</resources>
