<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/booksearch_nav_graph"
    app:startDestination="@id/fragment_search">

    <fragment
        android:id="@+id/fragment_favorite"
        android:name="com.stark.booksearchapp.ui.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_fragment_favorite_to_fragment_book"
            app:destination="@id/fragment_book"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.stark.booksearchapp.ui.view.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/fragment_search"
        android:name="com.stark.booksearchapp.ui.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_fragment_search_to_fragment_book"
            app:destination="@id/fragment_book"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_book"
        android:name="com.stark.booksearchapp.ui.view.BookFragment"
        android:label="@string/book_info"
        tools:layout="@layout/fragment_book" >
        <argument
            android:name="book"
            app:argType="com.stark.booksearchapp.data.model.Book" />
        <action
            android:id="@+id/action_fragment_book_to_registerBookReportFragment"
            app:destination="@id/fragment_register_book_report"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_book_report"
        android:name="com.stark.booksearchapp.ui.view.BookReportFragment"
        android:label="fragment_book_report"
        tools:layout="@layout/fragment_book_report" >
        <action
            android:id="@+id/action_fragment_book_report_to_bookReportDetailFragment"
            app:destination="@id/fragment_book_report_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_register_book_report"
        android:name="com.stark.booksearchapp.ui.view.BookReportRegisterFragment"
        android:label="fragment_register_book_report"
        tools:layout="@layout/fragment_register_book_report" >
        <argument
            android:name="book"
            app:argType="com.stark.booksearchapp.data.model.Book" />
        <action
            android:id="@+id/action_registerBookReportFragment_to_bookReportDetailFragment"
            app:destination="@id/fragment_book_report_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragment_book"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_book_report_detail"
        android:name="com.stark.booksearchapp.ui.view.BookReportDetailFragment"
        android:label="fragment_book_report_detail"
        tools:layout="@layout/fragment_book_report_detail" >
        <argument
            android:name="bookReport"
            app:argType="com.stark.booksearchapp.data.model.BookReport" />
        <action
            android:id="@+id/action_bookReportDetailFragment_to_fragment_book_report"
            app:destination="@id/fragment_book_report"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_bookReportDetailFragment_to_registerBookReportFragment"
            app:destination="@id/fragment_register_book_report" />
        <action
            android:id="@+id/action_fragment_book_report_detail_to_fragment_book_report_modify"
            app:destination="@id/fragment_book_report_modify"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_book_report_modify"
        android:name="com.stark.booksearchapp.ui.view.BookReportModifyFragment"
        android:label="fragment_book_report_modify"
        tools:layout="@layout/fragment_book_report_modify" >
        <argument
            android:name="bookReport"
            app:argType="com.stark.booksearchapp.data.model.BookReport" />
    </fragment>
</navigation>
